--- a/19 - Webcam Fun/package.json
+++ b/19 - Webcam Fun/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.12.5"
-  }
+    "browser-sync": "^2.24.4"
+  },
+  "dependencies": {}
 }
